fix: mobile images height overflow

--- a/assets/sass/component/_section.scss
+++ b/assets/sass/component/_section.scss
@@ -10,10 +10,9 @@
     }
     .home-sec__container{
         position: relative;
-        height: 100%;
+        @include define-responsive-property(height , 100% , 100% , auto , auto);
         display: flex;
         flex-direction: column;
-
     }
     .home-sec__title{
         // font-size: 228px;
